[package]
name = "bonsai-starter-methods-guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fibonacci"
path = "src/bin/fibonacci.rs"

[dependencies]
ethabi = { version = "18.0", default-features = false }
# Directly import radium to silence warning about unused patch. See https://github.com/risc0/risc0/issues/549
radium = "=0.7.1"
risc0-zkvm = { git = "https://github.com/risc0/risc0", branch = "release-0.18", default-features = false, features = ["std"] }
trie-db = { version= "0.24.0", default-features = false }
hash-db = "0.15.2"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
primitive-types = "0.12.1"
hash256-std-hasher = { version = "0.15.2" }
memory-db = { version = "0.30.0", default-features = false }
codec = { version = "3.1.3", package = "parity-scale-codec", default-features = false, features = ["derive"] }
rlp = { version = "0.5.1", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[patch.crates-io]
radium = { git = "https://github.com/bitvecto-rs/radium", rev = "723bed5abd75994ee4b7221b8b12c9f4e77ce408" }

[profile.release]
lto = true
opt-level = 3

[workspace]
